--- a/Auto/pom.xml
+++ b/Auto/pom.xml
@@ -24,4 +24,11 @@
       </plugin>
     </plugins>
   </build>
+  <dependencies>
+  	<dependency>
+  		<groupId>org.mockito</groupId>
+  		<artifactId>mockito-junit-jupiter</artifactId>
+  		<version>4.0.0</version>
+  	</dependency>
+  </dependencies>
 </project>
